deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-devops-nodejs
  template:
    metadata:
      labels:
        app: demo-devops-nodejs
    spec:
      containers:
        - name: demo-devops-nodejs
          image: ruteru/demo-devops-nodejs:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/users
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/users
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
